tests/__snapshots__/validation-configFile-syntax-errors-closing-brace.snap.txt
Error: Expected closing '}'.

  1 | {
  2 |   'failFast': true
  3 | 
    | ~

      at ./tstyche.json:3:1

    The opening '{' was seen here.

      1 | {
        | ~
      2 |   'failFast': true
      3 | 

          at ./tstyche.json:1:1

